--- a/sass/component/_c-anime.scss
+++ b/sass/component/_c-anime.scss
@@ -13,6 +13,30 @@
     60% {transform:translate(0, -1px) rotate(0deg);}
     70% {transform:translate(0, 0)rotate(1deg);}
     80% {transform:translate(0, -1px) rotate(0deg);}
-    9% {transform:translate(0, 0) rotate(-1deg);}
+    90% {transform:translate(0, 0) rotate(-1deg);}
     100% {transform:translate(0, -1px) rotate(0deg);}
+}
+
+@keyframes yurayuraY {
+    0%,100%{  transform: translateY(0px);}
+    50%{      transform: translateY(-2px);}
+}
+@keyframes yurayuraX {
+    0%,50%,100%{  transform: translateX(0px);}
+    25%{      transform: translateX(-4px);}
+    75%{      transform: translateX(4px);}
+}
+@keyframes yurayuraY {
+    0%,100%{  transform: translateY(0px);}
+    50%{      transform: translateY(-2px);}
+}
+@keyframes yurayura {
+    0%,100%{  transform: translate(0px,0px);}
+    12.5%{    transform: translate(-3px, 2px);}
+    25%{      transform: translate(-6px,-3px);}
+    37.5%{    transform: translate(-3px, 2px);}
+    50%{      transform: translate( 0px,-0px);}
+    62.5%{    transform: translate( 3px, 2px);}
+    75%{      transform: translate( 6px,-3px);}
+    87.5%{    transform: translate( 3px, 2px);}
 }
