--- a/sass/component/_c-tglbutton.scss
+++ b/sass/component/_c-tglbutton.scss
@@ -14,7 +14,7 @@ $root2:1.4142;
             display: block;
             width:100%;
             height: 20%;
-            background-color: #000;
+            background-color: $cla-d10;
             border-radius: 3px;
         }
     }
@@ -27,7 +27,7 @@ $root2:1.4142;
         bottom: 15%;
         width: 70%;
         height: 70%;
-
+        
     }
 }
 @mixin tglbutton-menu-on($baseclass,$b-size:10vw){
@@ -53,7 +53,7 @@ $root2:1.4142;
             left:0;
             border-radius: 50%;
             background-color: transparent;
-            border: solid 2px #000;
+            border: solid 3px $cla-d10;
         }
         .#{$baseclass}--bar3{
             transform: translateY(-$b-size/2) translateY(100%) rotate((-180*3)-45deg);
@@ -66,7 +66,7 @@ $root2:1.4142;
         display:inline-block;
         width:$b-size;
         height:$b-size;
-        background-color: yellow;
+        //background-color: yellow;
         margin-right:$b-size/2;
 
         display:flex;
@@ -76,7 +76,7 @@ $root2:1.4142;
         .#{$baseclass}--bar1,.#{$baseclass}--bar2{
             display: block;
             height: 15%;
-            background-color: #000;
+            background-color:$cla-d10;
             border-radius: 3px;
         }
         .#{$baseclass}--bar1{
