--- a/sass/project/_p-accordionmenu.scss
+++ b/sass/project/_p-accordionmenu.scss
@@ -7,29 +7,41 @@
         .#{$baseclass}--toggle{
             display:flex;
             align-items: center;
+            h3{
+                color:$cla-d10;
+                font-weight: bold;
+                background-color: #FFF1;
+                //backdrop-filter:blur(0.5px);
+            }
+        }
+        .#{$baseclass}--border{
+            width: 100%;
+            height: 3px;
+        }
+        .#{$baseclass}--list{
+            padding: 0 1.5rem;//
+            a{
+                display: block;
+                p{
+                    letter-spacing:0.05rem;
+                    background-color: #FFF1;
+                    //backdrop-filter:blur(0.5px);
+                }
+            }
         }
         .#{$baseclass}--on:not(:checked) ~ .#{$baseclass}--list{
             p,a{
-                line-height: 0.000001rem;
+                line-height: 0.000000000001;
                 opacity: 0;
-                //visibility: hidden;
-                /*
-                transition:
-                  line-height 1s ease-out,
-                  opacity     .5s linear;*/
+                margin: 0;
                 transform: scaleY(0);
             }
         }
         .#{$baseclass}--on:checked ~ .#{$baseclass}--list{
             p,a{
-                line-height: 1rem;
+                line-height: 1.4;
                 opacity: 1;
-                //visibility: visible;
-                /*
-                transition:
-                  line-height 1s ease-out,
-                  opacity     .5s linear .1s;
-                  */
+                margin: 0.8rem 0;
                 transform: scaleY(100%);
             }
         }
