--- a/style.css
+++ b/style.css
@@ -1518,10 +1518,10 @@ a:visited {
 
 .talk-base .tk-puff .tk-content.tks-s {
   z-index: auto;
-  border-top-left-radius: 39% 38%;
-  border-top-right-radius: 36% 45%;
-  border-bottom-right-radius: 38% 40%;
-  border-bottom-left-radius: 36% 38%;
+  border-top-left-radius: 45% 40%;
+  border-top-right-radius: 42% 44%;
+  border-bottom-right-radius: 43% 40%;
+  border-bottom-left-radius: 36% 44%;
 }
 
 .talk-base .tk-puff .tk-content.tks-s::before, .talk-base .tk-puff .tk-content.tks-s::after {
@@ -1537,31 +1537,31 @@ a:visited {
 .talk-base .tk-puff .tk-content.tks-s::before {
   width: 90%;
   left: 5%;
-  -webkit-transform: rotate(11deg);
-          transform: rotate(11deg);
-  border-top-left-radius: 43% 38%;
-  border-top-right-radius: 41% 38%;
-  border-bottom-right-radius: 43% 36%;
-  border-bottom-left-radius: 36% 38%;
+  -webkit-transform: rotate(14deg);
+          transform: rotate(14deg);
+  border-top-left-radius: 43% 43%;
+  border-top-right-radius: 40% 37%;
+  border-bottom-right-radius: 38% 37%;
+  border-bottom-left-radius: 41% 43%;
 }
 
 .talk-base .tk-puff .tk-content.tks-s::after {
   width: 90%;
   left: 5%;
-  -webkit-transform: rotate(-11deg);
-          transform: rotate(-11deg);
-  border-top-left-radius: 39% 44%;
-  border-top-right-radius: 45% 38%;
-  border-bottom-right-radius: 44% 36%;
-  border-bottom-left-radius: 40% 41%;
+  -webkit-transform: rotate(-12deg);
+          transform: rotate(-12deg);
+  border-top-left-radius: 44% 42%;
+  border-top-right-radius: 43% 43%;
+  border-bottom-right-radius: 44% 38%;
+  border-bottom-left-radius: 45% 39%;
 }
 
 .talk-base .tk-puff .tk-content.tks-m {
   z-index: auto;
-  border-top-left-radius: 44% 29%;
-  border-top-right-radius: 37% 37%;
-  border-bottom-right-radius: 37% 33%;
-  border-bottom-left-radius: 43% 32%;
+  border-top-left-radius: 41% 29%;
+  border-top-right-radius: 43% 32%;
+  border-bottom-right-radius: 41% 36%;
+  border-bottom-left-radius: 37% 37%;
 }
 
 .talk-base .tk-puff .tk-content.tks-m::before, .talk-base .tk-puff .tk-content.tks-m::after {
@@ -1575,29 +1575,29 @@ a:visited {
 }
 
 .talk-base .tk-puff .tk-content.tks-m::before {
-  -webkit-transform: rotate(9deg);
-          transform: rotate(9deg);
-  border-top-left-radius: 48% 32%;
-  border-top-right-radius: 42% 38%;
-  border-bottom-right-radius: 41% 36%;
-  border-bottom-left-radius: 49% 37%;
+  -webkit-transform: rotate(10deg);
+          transform: rotate(10deg);
+  border-top-left-radius: 48% 36%;
+  border-top-right-radius: 43% 33%;
+  border-bottom-right-radius: 44% 39%;
+  border-bottom-left-radius: 45% 40%;
 }
 
 .talk-base .tk-puff .tk-content.tks-m::after {
-  -webkit-transform: rotate(-11deg);
-          transform: rotate(-11deg);
-  border-top-left-radius: 43% 32%;
-  border-top-right-radius: 49% 33%;
-  border-bottom-right-radius: 49% 36%;
-  border-bottom-left-radius: 48% 37%;
+  -webkit-transform: rotate(-13deg);
+          transform: rotate(-13deg);
+  border-top-left-radius: 47% 36%;
+  border-top-right-radius: 44% 38%;
+  border-bottom-right-radius: 41% 38%;
+  border-bottom-left-radius: 42% 40%;
 }
 
 .talk-base .tk-puff .tk-content.tks-l {
   z-index: auto;
-  border-top-left-radius: 39% 24%;
-  border-top-right-radius: 39% 25%;
-  border-bottom-right-radius: 37% 26%;
-  border-bottom-left-radius: 34% 24%;
+  border-top-left-radius: 31% 25%;
+  border-top-right-radius: 31% 21%;
+  border-bottom-right-radius: 40% 23%;
+  border-bottom-left-radius: 38% 30%;
 }
 
 .talk-base .tk-puff .tk-content.tks-l::before, .talk-base .tk-puff .tk-content.tks-l::after {
@@ -1611,21 +1611,21 @@ a:visited {
 }
 
 .talk-base .tk-puff .tk-content.tks-l::before {
-  -webkit-transform: rotate(5deg);
-          transform: rotate(5deg);
-  border-top-left-radius: 49% 33%;
-  border-top-right-radius: 41% 33%;
-  border-bottom-right-radius: 49% 28%;
-  border-bottom-left-radius: 48% 33%;
+  -webkit-transform: rotate(8deg);
+          transform: rotate(8deg);
+  border-top-left-radius: 43% 34%;
+  border-top-right-radius: 42% 27%;
+  border-bottom-right-radius: 47% 33%;
+  border-bottom-left-radius: 46% 29%;
 }
 
 .talk-base .tk-puff .tk-content.tks-l::after {
-  -webkit-transform: rotate(-8deg);
-          transform: rotate(-8deg);
-  border-top-left-radius: 44% 35%;
-  border-top-right-radius: 48% 30%;
-  border-bottom-right-radius: 42% 33%;
-  border-bottom-left-radius: 46% 34%;
+  -webkit-transform: rotate(-9deg);
+          transform: rotate(-9deg);
+  border-top-left-radius: 41% 27%;
+  border-top-right-radius: 42% 32%;
+  border-bottom-right-radius: 47% 27%;
+  border-bottom-left-radius: 42% 31%;
 }
 
 .talk-base .tk-puff .tk-content .tkc-p {
@@ -1732,6 +1732,25 @@ a:visited {
             transform: scale(1, 1);
     margin-right: 0;
   }
+}
+
+/*表示変更*/
+.comment-form-comment label {
+  font-size: 0;
+}
+
+.comment-form-comment label:before {
+  font-size: 14px;
+  content: "内容";
+}
+
+.comment-form-author label {
+  font-size: 0;
+}
+
+.comment-form-author label:before {
+  font-size: 14px;
+  content: "ニックネーム";
 }
 
 #primary, #secondary {
@@ -1927,10 +1946,10 @@ a:visited {
     display: block;
     position: fixed;
     z-index: auto;
-    border-top-left-radius: 42% 40%;
-    border-top-right-radius: 42% 40%;
-    border-bottom-right-radius: 43% 36%;
-    border-bottom-left-radius: 36% 45%;
+    border-top-left-radius: 41% 36%;
+    border-top-right-radius: 38% 37%;
+    border-bottom-right-radius: 41% 42%;
+    border-bottom-left-radius: 38% 40%;
     -webkit-backdrop-filter: blur(5px);
             backdrop-filter: blur(5px);
   }
@@ -1948,12 +1967,12 @@ a:visited {
     top: 5%;
     width: 110%;
     height: 90%;
-    -webkit-transform: rotate(26deg);
-            transform: rotate(26deg);
-    border-top-left-radius: 52% 60%;
-    border-top-right-radius: 52% 57%;
-    border-bottom-right-radius: 47% 64%;
-    border-bottom-left-radius: 47% 56%;
+    -webkit-transform: rotate(24deg);
+            transform: rotate(24deg);
+    border-top-left-radius: 47% 57%;
+    border-top-right-radius: 47% 57%;
+    border-bottom-right-radius: 54% 59%;
+    border-bottom-left-radius: 51% 60%;
     background-color: red;
   }
   #navimenu .navimenu--area::after {
@@ -1963,10 +1982,10 @@ a:visited {
     height: 110%;
     -webkit-transform: rotate(-24deg);
             transform: rotate(-24deg);
-    border-top-left-radius: 52% 62%;
-    border-top-right-radius: 54% 65%;
-    border-bottom-right-radius: 52% 60%;
-    border-bottom-left-radius: 47% 64%;
+    border-top-left-radius: 55% 62%;
+    border-top-right-radius: 49% 57%;
+    border-bottom-right-radius: 51% 61%;
+    border-bottom-left-radius: 54% 64%;
     background-color: green;
   }
   #navimenu #navimenu--on:not(:checked) ~ .navimenu--area {
@@ -2579,10 +2598,6 @@ a:visited {
 
 .single article a:hover {
   /*animation: bound 1s ease 0s infinite normal;*/
-}
-
-.single #comments {
-  display: none;
 }
 
 .single .nav-links .nav-previous, .single .nav-links .nav-next {
