--- a/sass/project/_p-comments.scss
+++ b/sass/project/_p-comments.scss
@@ -3,4 +3,5 @@
 .comment-form-comment label:before {font-size: 14px; content: "内容";}
 .comment-form-author label{font-size:0;}
 .comment-form-author label:before {font-size: 14px; content: "ニックネーム";}
+.comments-area{margin:1rem 0;}
 #comment{width:100%;}
